# dotfiles

./: .bash_aliases  .bash_completion  .bashrc  .bashrc.append  .gitattributes  .gitignore  .gitmodules  .inputrc  .password-store  .pre-commit-config.yaml  .profile  .profile.append  .spacemacs.patch  .tmux.conf  .wgetrc  .xbindkeysrc  CLAUDE.md  LICENSE  Makefile  Makefile.apt  README.md  append.sh  apt  apt-install.sh  apt.list  bootstrap.sh  browserpass.sh  chrome-install.sh  decrypt.sh  deploy.sh  dropbox-init.sh  error.sh  expand.sh  im-config.sh  im-config.txt  install-apt.sh  install-chrome.sh  install-dconf.sh  install-dropbox.sh  install-grub.sh  (+10 more)
.config/: .bashrc  git  readline  tmux
.config/.local/: .bash_aliases  .bashrc  .profile  .tmux.conf
.config/dconf/: default.txt  local.txt  user.txt
.config/fcitx/: config
.config/fcitx5/: config
.config/git/: config  ignore  include  user.config
.config/tig/: config
.gnupg/: sshcontrol
completions/: apt-depends  apt-install
develop/: .clang-format
im-config/: title
lib/: env-detect.sh  logging.sh  safe-delete.sh
module/: chrome.sh  dconf.sh  im-config.sh
script/: append.sh  apt-installed.sh  apt-is-installed  apt-register  apt-register.sh  apt.sh  chrome-download.sh  chrome-install.sh  chrome.sh  copy.sh  dropbox-init.sh  error  fcitx-instruction.sh  function  install.sh  link.sh  patch.sh  spacemacs-clone.sh  spacemacs-init.sh  spacemacs.sh
tests/: bashrc.bats  bootstrap.bats  conftest.py  deploy.bats  env-detect.bats  git-config.bats  logging.bats  safe-delete.bats  test_trash.py  trash.bats
(+62 files in other folders)
